<resources>
    <string name="app_name">Bjørneparken</string>
    <string name="facebook_app_id">611788629011007</string>
    <string name="facebook_place_id">201367389875716</string>
    <string name="hashtag">#bjørneparken</string>

    <!-- Welcome Screen -->
    <string name="welcome_start">When are you visiting us?</string>
    <string name="welcome_end">&#8230;and when are you here until?</string>
    <string name="welcome_back">Back</string>
    <string name="welcome_next">Next</string>
    <string name="welcome_save">OK</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Navigation drawer open</string>
    <string name="drawer_close">Navigation drawer closed</string>
    <string name="home">Home</string>
    <string name="my_visit">My Visit</string>
    <string name="animals">Animals</string>
    <string name="events">Events</string>
    <string name="attractions">Attractions</string>
    <string name="amenities">Amenities</string>
    <string name="park_map">Map</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="social">Social</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- Lists -->
    <string name="list_empty">No items found.</string>
    <string name="starred">Starred</string>
    <string name="unstarred">Unstarred</string>

    <!-- Home Activity -->
    <string name="up_next">Up Next:</string>

    <!-- Select Feeding Dialog -->
    <string name="select_feeding">Select a feeding:</string>
    <string name="close_dialog">OK</string>

    <!-- Confirm Dialog -->
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_unstar_species_title">Are you sure?</string>
    <string name="confirm_unstar_species_message">Unstarring an animal will remove all feedings for animals of this type from your itinerary.</string>
    <string name="event_conflict_title">Event Conflict</string>
    <string name="event_conflict_message">The event you have selected conflicts with a previously starred event. To star this event, first remove any conflicting events from your itinerary.</string>
    <string name="no_feedings_title">No Feedings Available</string>
    <string name="no_feedings_message" formatted="false">There aren\'t currently any scheduled feedings for the %1s, however you can still find them in the following places; %2s.</string>
    <string name="species_unavailable_title">%1s Not Currently Available</string>
    <string name="species_unavailable_message">This animal isn\'t currently available to see in our park.</string>

    <!-- Notification -->
    <string name="event_warning">In %1$d minutes</string>
    <string name="event_now">Now</string>

    <!-- Detail Fragment -->
    <string name="keeper">Keeper</string>

    <!-- My Visit Fragment -->
    <string name="empty_itinerary">You don\'t currently have any favourites. Go to the \'Animals\' tab to favourite some feedings, or the \'Events\' tab to browse our events!</string>
    <string name="no_more_events">That\'s it for today!</string>

    <!-- Animals Fragment -->
    <string name="no_species">Connect to the internet to see what\'s available in our park.</string>

    <!-- Attractions Fragment -->
    <string name="no_attractions">Connect to the internet to see what\'s available in our park.</string>

    <!-- Amenities Fragment -->
    <string name="no_amenities">Connect to the internet to see what\'s available in our park.</string>

    <!-- Share Fragment -->
    <string name="share_facebook">Share to Facebook</string>
    <string name="share_twitter">Share to Twitter</string>
    <string name="share_instagram">Share to Instagram</string>
    <string name="share_other">Share to other</string>
    <string name="share_photo">Share Photo</string>
    <string name="trip_advisor_widget">&lt;div id=&quot;TA_cdswritereviewlg363&quot; class=&quot;TA_cdswritereviewlg&quot;&gt;&lt;ul id=&quot;GlKPiSM&quot; class=&quot;TA_links urWVTeEh&quot;&gt;&lt;li id=&quot;U5RGdYUUfw&quot; class=&quot;OLT1ZKw4h&quot;&gt;&lt;a target=&quot;_blank&quot; href=&quot;https://www.tripadvisor.co.uk/&quot;&gt;&lt;img src=&quot;https://www.tripadvisor.co.uk/img/cdsi/img2/branding/medium&#8211;logo&#8211;12097&#8211;2.png&quot; alt=&quot;TripAdvisor&quot;/&gt;&lt;/a&gt;&lt;/li&gt;&lt;/ul&gt;&lt;/div&gt;&lt;script src=&quot;https://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=363&amp;locationId=6825946&amp;lang=en_UK&amp;lang=en_UK&amp;display_version=2&quot;&gt;&lt;/script&gt;</string>

    <!-- Settings Fragment -->
    <string name="notifications">Notifications</string>

    <!-- Help Fragment -->
    <string name="help_about_label">About Us</string>
    <string name="help_about">In Bjørneparken our presenters will give free animal talks and escort you to animal encounters, every hour, every day. The animals include a variety of Norwegian predators and wild animals, as well as familiar domestic farm animals. In March of 2016, we opened the largest crocodile exhibition in Norway, with 30 crocodiles, snakes and tortoises. Our animals are housed in large natural enclosures. You can watch the animals up close and learn about them from our dedicated presenters. We have loads for the kids to explore and do in our play areas, like obstacle courses, zip-line, outdoor and indoor playgrounds, and several restaurants. Bjørneparken is full of unforgettable experiences for the whole family. Welcome to Bjørneparken!</string>
    <string name="help_emergency_label">What to Do in Case of Emergency</string>
    <string name="help_emergency">In the event that you or a member of your party becomes injured, contact a member of park staff as soon as possible.</string>
    <string name="help_contact_details">Contact Details</string>
    <string name="help_tel_label">Telephone:</string>
    <string name="help_tel">+47 32 05 35 10</string>
    <string name="help_email_label">E-mail:</string>
    <string name="help_email">rugg@bjorneparken.no</string>
    <string name="email_subject">Enquiry</string>

    <!-- Amenity Types -->
    <string name="ATTRACTION">Attraction</string>
    <string name="BBQ">Barbecue</string>
    <string name="PLAY_AREA">Play Area</string>
    <string name="RECEPTION">Reception Building</string>
    <string name="RESTAURANT">Restaurant</string>
    <string name="SNACKS">Snacks</string>
    <string name="WC">Toilets</string>

</resources>
